Patch version updated, create builds, update example

--- a/example/index.html
+++ b/example/index.html
@@ -17,6 +17,6 @@
             <p>A spinner gif to check that the UI remains responsive</p>
             <iframe src="https://giphy.com/embed/3ohhwLkMW3oH0136tG" width="461" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/love-cute-pink-3ohhwLkMW3oH0136tG">via GIPHY</a></p>
         </div>
-        <script type="module" src="./main.js"></script>
+        <script type="module" src="main.js"></script>
     </body>
 </html>
